--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "com.reshyl.gui-utilities",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "displayName": "GUI Utilities",
   "description": "Small GUI systems and utility scripts to help managing UI in Unity.",
   "unity": "2019.1",
   "keywords": [
     "unity",
-    "gui",
-    "canvas"
+    "ui",
+    "unity-package",
+	"ugui"
   ],
   "repository": {
     "type": "git",
@@ -17,6 +18,11 @@
   "homepage": "https://github.com/reshyl/gui-utilities#readme",
   "bugs": {
     "url": "https://github.com/reshyl/gui-utilities/issues"
+  },
+  "changelogUrl": "https://github.com/reshyl/gui-utilities/commits/main/",
+  "dependencies": {
+	"com.unity.ugui": "1.0.0",
+    "com.unity.textmeshpro": "3.0.6"
   },
   "author": {
     "name": "Reshyl",
